@@ -1,21 +1,25 @@
 package com.example.carrestservice.service;
 
-import com.example.carrestservice.entity.CarModel;
 import com.example.carrestservice.entity.Category;
 import com.example.carrestservice.exception.CategoryNameException;
 import com.example.carrestservice.exception.CategoryNotFoundException;
 import com.example.carrestservice.repository.CategoryRepository;
-import jakarta.persistence.Column;
+import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
 import java.util.Optional;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -24,360 +28,209 @@ import static org.mockito.Mockito.*;
 public class CategoryServiceTest {
 
     @Autowired
-    private CategoryService categoryService;
+    CategoryService categoryService;
 
     @MockBean
-    private CategoryRepository categoryRepository;
+    CategoryRepository categoryRepository;
 
+    static Category category;
+
+    @BeforeAll
+    static void init() {
+        category = new Category();
+        category.setCategoryId(1L);
+        category.setCategoryName("Test");
+    }
+
+    static Stream<Pageable> pageableProvider() {
+        return Stream.of(
+                PageRequest.of(0, 5),
+                PageRequest.of(1, 10),
+                PageRequest.of(2, 20),
+                PageRequest.of(3, 25),
+                PageRequest.of(4, 30),
+                PageRequest.of(5, 40),
+                PageRequest.of(6, 45),
+                PageRequest.of(7, 50),
+                PageRequest.of(8, 55),
+                PageRequest.of(9, 60)
+        );
+    }
 
     @Test
     void createCategory_shouldReturnCategory_whenInputContainsCategory() {
 
-        String categoryName = "Test category name";
+        when(categoryRepository.existsByCategoryName(category.getCategoryName()))
+                .thenReturn(false);
 
-        Category expectedCategory = new Category();
+        when(categoryRepository.save(category))
+                .thenReturn(category);
 
-        expectedCategory.setCategoryName(categoryName);
-        expectedCategory.setCars(Collections.emptySet());
-
-        when(categoryRepository.findByCategoryName(categoryName))
-                .thenReturn(Optional.empty());
-
-        when(categoryRepository.save(expectedCategory))
-                .thenReturn(expectedCategory);
-
-        Category actualCategory = categoryService.createCategory(expectedCategory);
+        Category actualCategory = categoryService.createCategory(category);
 
         assertNotNull(actualCategory);
-        assertEquals(expectedCategory, actualCategory);
+        assertEquals(category, actualCategory);
 
-        verify(categoryRepository).findByCategoryName(categoryName);
-        verify(categoryRepository).save(expectedCategory);
-
+        verify(categoryRepository).existsByCategoryName(category.getCategoryName());
+        verify(categoryRepository).save(category);
     }
 
     @Test
     void createCategory_shouldThrowException_whenInputContainsNull() {
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.createCategory(null));
-        assertEquals("Category can not be null!", exception.getMessage());
 
-        verify(categoryRepository, never()).findByCategoryName(null);
+        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.createCategory(null));
+
+        assertEquals("Category cannot be null!", exception.getMessage());
+
+        verify(categoryRepository, never()).existsByCategoryName(null);
         verify(categoryRepository, never()).save(null);
     }
 
     @Test
-    void createCategory_shouldThrowException_whenInputContainsCategoryWithExistingCategoryName() {
+    void createCategory_shouldThrowException_whenInputContainsCategoryWithExistingName() {
 
-        String categoryName = "Test category name";
+        when(categoryRepository.existsByCategoryName(category.getCategoryName()))
+                .thenReturn(true);
 
-        Category category = new Category();
-        category.setCategoryName(categoryName);
-        category.setCars(Collections.emptySet());
-
-        when(categoryRepository.findByCategoryName(categoryName))
-                .thenReturn(Optional.ofNullable(category));
-
-        CategoryNotFoundException exception = assertThrows(CategoryNotFoundException.class, () -> categoryService.createCategory(category));
+        CategoryNameException exception = assertThrows(CategoryNameException.class, () -> categoryService.createCategory(category));
 
         assertEquals("Category name " + category.getCategoryName() + " already exists!", exception.getMessage());
 
-        verify(categoryRepository).findByCategoryName(categoryName);
+        verify(categoryRepository).existsByCategoryName(category.getCategoryName());
         verify(categoryRepository, never()).save(category);
-
     }
 
     @Test
-    void updateCategory_shouldReturnCategory_whenInputContainsCategory() {
-
-        long categoryId = 1;
-        String categoryName = "Test category name";
-
-        Category category = new Category();
-
-        category.setCategoryId(categoryId);
-        category.setCategoryName(categoryName);
-        category.setCars(Collections.emptySet());
-
-        Category updatedCategory = new Category();
-
-        updatedCategory.setCategoryId(categoryId);
-        updatedCategory.setCategoryName("Test category 1");
-        updatedCategory.setCars(Collections.emptySet());
+    void updateCategory_shouldUpdateCategory_whenInputContainsCategory() {
 
         when(categoryRepository.findById(category.getCategoryId()))
-                .thenReturn(Optional.ofNullable(category));
+                .thenReturn(Optional.of(category));
 
-        when(categoryRepository.existsByCategoryName(updatedCategory.getCategoryName()))
+        when(categoryRepository.existsByCategoryName(category.getCategoryName()))
                 .thenReturn(false);
 
-        when(categoryRepository.save(updatedCategory))
-                .thenReturn(updatedCategory);
-
-        Category actualCategory = categoryService.updateCategory(updatedCategory);
-
-        assertNotNull(actualCategory);
-        assertEquals(updatedCategory, actualCategory);
+        categoryService.updateCategory(category);
 
         verify(categoryRepository).findById(category.getCategoryId());
-        verify(categoryRepository).existsByCategoryName(updatedCategory.getCategoryName());
-        verify(categoryRepository).save(updatedCategory);
-
+        verify(categoryRepository).existsByCategoryName(category.getCategoryName());
     }
-
 
     @Test
     void updateCategory_shouldThrowException_whenInputContainsNull() {
 
         IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.updateCategory(null));
-        assertEquals("Category can not be null!", exception.getMessage());
+        assertEquals("Category cannot be null!", exception.getMessage());
 
-        verify(categoryRepository,never()).findById(0L);
-        verify(categoryRepository,never()).existsByCategoryName(null);
-        verify(categoryRepository,never()).save(null);
-
+        verify(categoryRepository, never()).findById(0L);
+        verify(categoryRepository, never()).save(null);
     }
 
     @Test
-    void updateCategory_shouldThrowException_whenInputContainsCategoryWithExistingCategoryName() {
-
-        long categoryId = 1;
-        String categoryName = "Test category name";
-
-        Category category = new Category();
-
-        category.setCategoryId(categoryId);
-        category.setCategoryName(categoryName);
-        category.setCars(Collections.emptySet());
-
-        Category updatedCategory = new Category();
-
-        updatedCategory.setCategoryId(categoryId);
-        updatedCategory.setCategoryName(categoryName);
-        updatedCategory.setCars(Collections.emptySet());
+    void updateCategory_shouldThrowException_whenInputContainsCategoryWithExistingName() {
 
         when(categoryRepository.findById(category.getCategoryId()))
                 .thenReturn(Optional.ofNullable(category));
 
-        when(categoryRepository.existsByCategoryName(updatedCategory.getCategoryName()))
+        when(categoryRepository.existsByCategoryName(category.getCategoryName()))
                 .thenReturn(true);
 
-        CategoryNameException exception = assertThrows(CategoryNameException.class, () -> categoryService.updateCategory(updatedCategory));
+        CategoryNameException exception = assertThrows(CategoryNameException.class, () -> categoryService.updateCategory(category));
 
-        assertEquals("Category name " + updatedCategory.getCategoryName() + " already exists!", exception.getMessage());
+        assertEquals("Category name " + category.getCategoryName() + " already exists!", exception.getMessage());
 
         verify(categoryRepository).findById(category.getCategoryId());
-        verify(categoryRepository).existsByCategoryName(updatedCategory.getCategoryName());
-        verify(categoryRepository,never()).save(null);
-
+        verify(categoryRepository).existsByCategoryName(category.getCategoryName());
     }
 
     @Test
-    void updateCategory_shouldThrowException_whenInputContainsCategoryWithNotExistingCategoryId() {
+    void updateCategory_shouldThrowException_whenInputContainsCategoryWithNotExistingId() {
 
-        long categoryId = 1;
-        String categoryName = "Test category name";
-
-        Category category = new Category();
-
-        category.setCategoryId(categoryId);
-        category.setCategoryName(categoryName);
-        category.setCars(Collections.emptySet());
-
-        when(categoryRepository.findById(categoryId))
+        when(categoryRepository.findById(category.getCategoryId()))
                 .thenReturn(Optional.empty());
 
         CategoryNotFoundException exception = assertThrows(CategoryNotFoundException.class, () -> categoryService.updateCategory(category));
 
         assertEquals("Category with Id " + category.getCategoryId() + " not found.", exception.getMessage());
 
-        verify(categoryRepository).findById(categoryId);
+        verify(categoryRepository).findById(category.getCategoryId());
         verify(categoryRepository, never()).existsByCategoryName(null);
-        verify(categoryRepository,never()).save(null);
-
+        verify(categoryRepository, never()).save(null);
     }
 
     @Test
-    void removeById_shouldReturnCategory_whenInputContainsExistingCategoryId() {
+    void removeById_shouldRemoveCategory_whenInputContainsExistingCategoryId() {
 
-        long categoryId = 1;
-        String categoryName = "Test category name";
+        long categoryId = 1L;
 
-        Category expectedCategory = new Category();
-
-        expectedCategory.setCategoryId(categoryId);
-        expectedCategory.setCategoryName(categoryName);
-        expectedCategory.setCars(Collections.emptySet());
-
-        when(categoryRepository.findById(categoryId))
-                .thenReturn(Optional.ofNullable(expectedCategory));
+        when(categoryRepository.existsByCategoryId(categoryId))
+                .thenReturn(true);
 
         doNothing().when(categoryRepository).deleteById(categoryId);
 
-        Category actualCategory = categoryService.removeById(categoryId);
+        categoryService.removeById(categoryId);
 
-        assertNotNull(actualCategory);
-        assertEquals(expectedCategory, actualCategory);
-
-        verify(categoryRepository).findById(categoryId);
+        verify(categoryRepository).existsByCategoryId(categoryId);
         verify(categoryRepository).deleteById(categoryId);
-
     }
 
-    @Test
-    void removeById_shouldThrowException_whenInputContainsCategoryWithNotExistingCategoryId() {
+    @ParameterizedTest
+    @ValueSource(longs = {11L, 20L, 30L, 40L, 50L, 60L, 70L, 80L, 90L, 100L})
+    void removeById_shouldThrowException_whenInputContainsNotExistingCategoryId(long categoryId) {
 
-        long categoryId = 100;
-
-        when(categoryRepository.findById(categoryId))
-                .thenReturn(Optional.empty());
+        when(categoryRepository.existsByCategoryId(categoryId))
+                .thenReturn(false);
 
         CategoryNotFoundException exception = assertThrows(CategoryNotFoundException.class, () -> categoryService.removeById(categoryId));
 
         assertEquals("Category with Id " + categoryId + " not found.", exception.getMessage());
 
-        verify(categoryRepository).findById(categoryId);
-        verify(categoryRepository,never()).deleteById(categoryId);
-
+        verify(categoryRepository).existsByCategoryId(categoryId);
+        verify(categoryRepository, never()).deleteById(categoryId);
     }
 
-    @Test
-    void getAll_shouldReturnCorrectCategoryList() {
+    @ParameterizedTest
+    @MethodSource("pageableProvider")
+    void getAll_shouldReturnCategoryPage_whenInputContainsCorrectPageable(Pageable pageable) {
 
-        when(categoryRepository.findAll())
-                .thenReturn(Collections.emptyList());
-
-        List<Category> categoryList = categoryService.getAll();
-
-        assertTrue(categoryList.isEmpty());
-
-        verify(categoryRepository).findAll();
-
-    }
-
-    @Test
-    void getAll_shouldReturnCategoryList_whenInputContainsCorrectData() {
-
-        String sortDirection = "ASC";
-        String sortField = "categoryName";
-
-        Sort.Direction direction = Sort.Direction.fromString(sortDirection);
-
-        Sort sort = Sort.by(direction, sortField);
-
-        when(categoryRepository.findAll(sort))
-                .thenReturn(Collections.emptyList());
-
-        List<Category> categoryList = categoryService.getAll();
-
-        assertNotNull(categoryList);
-        assertTrue(categoryList.isEmpty());
-
-        verify(categoryRepository).findAll();
-
-    }
-
-    @Test
-    void getAll_shouldThrowException_whenInputContainsNotExistingSortField() {
-
-        String sortDirection = "ASC";
-        String sortField = "Test sort field";
-
-
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.getAll(sortDirection, sortField));
-
-        assertEquals("Invalid sort field : " + sortField, exception.getMessage());
-
-        verify(categoryRepository, never()).findAll();
-
-    }
-
-    @Test
-    void getPage_shouldReturnPage_whenInputContainsCorrectData() {
-
-        int offset = 10;
-        int pageSize = 10;
-
-        Pageable pageable = PageRequest.of(offset, pageSize);
-
-        Page<Category> expectedCategoryPage = new PageImpl<>(Collections.emptyList(),pageable,0);
+        Page<Category> page = new PageImpl<>(List.of(category), pageable, 2);
 
         when(categoryRepository.findAll(pageable))
-                .thenReturn(expectedCategoryPage);
+                .thenReturn(page);
 
-        Page<Category> actualCategoryPage = categoryService.getPage(offset, pageSize);
+        Page<Category> actualPage = categoryService.getAll(pageable);
 
-        assertNotNull(actualCategoryPage);
-        assertEquals(expectedCategoryPage, actualCategoryPage);
+        assertEquals(page, actualPage);
 
         verify(categoryRepository).findAll(pageable);
-
-    }
-
-    @Test
-    void getPage_shouldThrowException_whenInputContainsNegativeOffset() {
-
-        int offset = -10;
-        int pageSize = 10;
-
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.getPage(offset, pageSize));
-
-        assertEquals("Offset must be a non-negative integer.", exception.getMessage());
-
-        verify(categoryRepository, never()).findAll();
-
-    }
-
-    @Test
-    void getPage_shouldThrowException_whenInputContainsNegativePageSize() {
-
-        int offset = 10;
-        int pageSize = -10;
-
-        IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> categoryService.getPage(offset, pageSize));
-
-        assertEquals("Page size must be a positive integer.", exception.getMessage());
-
-        verify(categoryRepository, never()).findAll();
-
     }
 
     @Test
     void getById_shouldReturnCategory_whenInputContainsExistingCategoryId() {
 
-        long categoryId = 1;
-        String categoryName = "Test category name";
-
-        Category expectedCategory = new Category();
-
-        expectedCategory.setCategoryId(categoryId);
-        expectedCategory.setCategoryName(categoryName);
+        long categoryId = 1L;
 
         when(categoryRepository.findById(categoryId))
-                .thenReturn(Optional.ofNullable(expectedCategory));
+                .thenReturn(Optional.ofNullable(category));
 
         Category actualCategory = categoryService.getById(categoryId);
 
         assertNotNull(actualCategory);
-        assertEquals(expectedCategory, actualCategory);
+        assertEquals(category, actualCategory);
 
         verify(categoryRepository).findById(categoryId);
-
     }
 
-    @Test
-    void getById_shouldThrowException_whenInputContainsCategoryWithNotExistingCategoryId() {
-
-        long categoryId = 100;
+    @ParameterizedTest
+    @ValueSource(longs = {11L, 20L, 30L, 40L, 50L, 60L, 70L, 80L, 90L, 100L})
+    void getById_shouldThrowException_whenInputContainsNotExistingCategoryId(long categoryId) {
 
         when(categoryRepository.findById(categoryId))
                 .thenReturn(Optional.empty());
 
         CategoryNotFoundException exception = assertThrows(CategoryNotFoundException.class, () -> categoryService.getById(categoryId));
 
-        assertEquals("Category with Id " + categoryId + " not found." , exception.getMessage());
+        assertEquals("Category with Id " + categoryId + " not found.", exception.getMessage());
 
         verify(categoryRepository).findById(categoryId);
-
     }
-
 }
